# pie

./: .env  .gitignore  CAN.md  README.md  compose.dev.yml  compose.yml  deploy.sh  justfile  log.txt  package-lock.json
backend/: Cargo.toml  Dockerfile  Dockerfile.dev
backend/bindings/: BackendEventData.ts  BmsTelemetry.ts  DeviceStatus.ts  WsEnvelope.ts
backend/src/: bridge.rs  device.rs  main.rs  other.txt
backend/src/can/: data.rs  handler.rs  message.rs  mod.rs  socket.rs
backend/src/websocket/: message.rs  mod.rs
backend_v3/backend/: Cargo.toml  Dockerfile
backend_v3/backend/bindings/: BmsRequest.ts  DaqMessage.ts  DaqRequest.ts  DaqTelemetry.ts  Device.ts  System.ts  VcuRequest.ts  WsIncoming.ts  WsOutgoing.ts
backend_v3/backend/src/: bridge.rs  device.rs  main.rs
backend_v3/backend/src/can/: command.rs  encode.rs  error.rs  frame.rs  id.rs  message.rs  mod.rs  node.rs  socket.rs
backend_v3/backend/src/websocket/: bms.rs  daq.rs  handler.rs  message.rs  mod.rs  socket.rs  vcu.rs
can-bridge/: Cargo.toml  Dockerfile  Dockerfile.dev  ezfd-bootloader  run.sh
can-bridge/src/: can.rs  canprotocol.rs  device_tracker.rs  guicomms.rs  main.rs  vcan.py
can-cli/: Cargo.toml
can-cli/src/: main.rs
dfr-ev-gui/: package-lock.json  package.json
dfr-ev-gui/src/components/: CommonLayout.tsx  component-example.tsx
dfr-ev-gui/src/hooks/: useDaqSocket.ts
dfr-ev-gui/src/pages/: BmsMonitor.tsx  DaqMonitor.tsx  Logs.tsx
gui/: Caddyfile  Dockerfile  index.html
gui/src/: App.tsx
gui/src/components/: CellVoltage.tsx  Graph.tsx  InfoBox.tsx  NavigationBar.tsx  NodeStatus.tsx  TextBoxes.tsx
gui/src/hooks/: backendSocket.ts  useDaqSocket.ts
gui/src/pages/: BmsMonitor.tsx  DaqMonitor.tsx  Homepage.tsx  Logs.tsx
gui/src/types/: backend.ts  daq.ts
wscan-interface/: Cargo.toml
wscan-interface/src/: main.rs
