[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
socketcan = {version = "3.5.0", features = ["tokio"]}
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = "0.28"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
futures-util = "0.3"
hex = "0.4.3"
chrono = "0.4.43"
anyhow = "1.0.101"