[package]
name = "can-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
embedded-can = "0.4.1"
env_logger = "0.11.9"
futures-util = "0.3.32"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
socketcan = "3.5.0"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
