[package]
name = "can-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
crossterm = "0.28.1"
futures-util = "0.3.32"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = "0.29.0"
